# smart-farm-water-tank

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MONITOR_ONLY_GUIDE.md  README.md  implementation_plan.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3
components/battery_monitor/: API.md  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  idf_component.yml
components/battery_monitor/host_test/: CMakeLists.txt  coverage_common.cmake  extra_dirs_common.cmake
components/battery_monitor/host_test/common/: mock_battery_adc_reader.hpp  mock_i_adc_battery_reader.hpp
components/battery_monitor/host_test/test_battery_monitor/: CMakeLists.txt
components/battery_monitor/host_test/test_battery_monitor/main/: CMakeLists.txt  test_battery_monitor.cpp
components/battery_monitor/include/: adc_battery_reader.hpp  battery_monitor.hpp  battery_monitor_types.hpp  bm_hal_timer.hpp  hal_adc_calibration.hpp  hal_adc_oneshot.hpp
components/battery_monitor/include/interfaces/: i_adc_battery_reader.hpp  i_battery_adc_reader.hpp  i_battery_monitor.hpp  i_bm_hal_timer.hpp  i_hal_adc_calibration.hpp  i_hal_adc_oneshot.hpp
components/battery_monitor/src/: adc_battery_reader.cpp  battery_monitor.cpp  bm_hal_timer.cpp  hal_adc_calibration.cpp  hal_adc_oneshot.cpp
docs/: ISSUE_fill_min_distance.md  ISSUE_fill_state_detection.md  ISSUE_reflexive_sensor_oor_timeout_cascade.md  tank_geometry.ods
host_test/: app_water_tank_tests.md  coverage_common.cmake
host_test/common/: mock_bm_hal_timer.hpp  mock_hal_adc_calibration.hpp  mock_hal_adc_oneshot.hpp  mock_hal_nvs.hpp  mock_hal_sleep.hpp  mock_i_battery_monitor.hpp  mock_i_espnow_manager.hpp  mock_i_float_switch.hpp  mock_i_level_sensor.hpp  mock_i_ota_manager.hpp  mock_i_ota_trigger.hpp  mock_i_power_control.hpp  mock_i_water_tank_storage.hpp  mock_i_wifi_manager.hpp
host_test/gtest/: CMakeLists.txt
host_test/test_water_tank/: CMakeLists.txt
host_test/test_water_tank/main/: CMakeLists.txt  main.cpp  test_ota_controller.cpp  test_water_tank_app.cpp  test_water_tank_geometry.cpp  test_water_tank_logic.cpp
logger/: README.md  field_test_logs.txt  field_test_logs_20260712_214709.txt  udp_logger.py
main/: CMakeLists.txt  main.cpp
main/include/: ota_controller.hpp  secrets.hpp.example  tank_geometry.hpp  ultrasonic_adapter.hpp  water_tank_app.hpp  water_tank_logic.hpp  water_tank_nvs.hpp  water_tank_stats.hpp  water_tank_storage_adapter.hpp  water_tank_types.hpp
main/include/interfaces/: i_level_sensor.hpp  i_water_tank_storage.hpp
main/src/: ota_controller.cpp  tank_geometry.cpp  water_tank_app.cpp  water_tank_logic.cpp  water_tank_nvs.cpp
